--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,16 @@ exclude="__init__.py"
 [mypy]
 files=job
 ignore_missing_imports=true
+
+[GRAPH_API]
+BASE = https://graph.facebook.com/v9.0
+USERNAME = vinicius.py
+IG_USER_ID = 17841411237972805
+ACCESS_TOKEN =
+
+[S3]
+DATALAKE_BUCKET_NAME = insta-vags-datalake-dev/raw_data
+
+[AWS]
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
